--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
-discord.py==2.0.0
-easyocr==1.6.2
-torch==2.0.1
-torchvision==0.15.2
-Pillow==9.5.0
+discord.py
+torch
+torchvision
+pillow
+ftfy
+regex
+tqdm
 opencv-python-headless
-numpy
+git+https://github.com/openai/CLIP.git
